file size improvements
based on the technical evaluation of the 2D editor, we found out that the filesize of the presentation depends a lot on the image size of the rendered canvas. Therefore we reduced the size.

--- a/2D_Editor/WelcomeWindow.xaml
+++ b/2D_Editor/WelcomeWindow.xaml
@@ -8,7 +8,7 @@
         xmlns:converters="clr-namespace:_2D_Editor.Converters"
         xmlns:local="clr-namespace:_2D_Editor"
         mc:Ignorable="d"
-        Title="WelcomeWindow" Height="450" Width="800"
+        Title="2D Editor" Height="450" Width="800"
         Icon="Images/icon.png">
     <Window.Resources>
         <converters:BoolToVisibility x:Key="BoolToVisibillity"/>
