--- a/2D_Editor/PDFImportDialog.xaml
+++ b/2D_Editor/PDFImportDialog.xaml
@@ -17,18 +17,50 @@
                 <StackPanel>
                     <TextBlock FontSize="30">Import PDF</TextBlock>
                     <Separator/>
-                    <Grid>
+                    <Grid Margin="0 0 0 10">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="1*" />
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
                         <StackPanel Grid.Column="0" Orientation="Horizontal" VerticalAlignment="Center">
                             <TextBlock Grid.Column="1" Margin="0, 10, 0, 0">Selected File:</TextBlock>
-                            <TextBlock Margin="20, 10, 0, 0">No Selection</TextBlock>
+                            <TextBlock x:Name="showSelection" Margin="20, 10, 0, 0">No Selection</TextBlock>
                         </StackPanel>
-                        <Button Grid.Column="1" Margin="0, 10, 0, 0" Padding="30 10" >Select PDF</Button>
+                        <Button Grid.Column="1" Margin="0, 10, 0, 0" Padding="30 10" Click="SelectPdfFile">Select PDF</Button>
                     </Grid>
-                    
+                    <TextBlock VerticalAlignment="Bottom"
+                                   Margin="0, 0, 0, 10"
+                                   TextDecorations="Underline"
+                                   Foreground="Blue"
+                                   Cursor="Hand"
+                                   MouseLeftButtonDown="ShowAdvanced"
+                                   >Advanced Settings</TextBlock>
+                    <Border x:Name="advancedPDFImportSettings" Visibility="Collapsed">
+                        <Grid Margin="0 0 0 10">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                            </Grid.RowDefinitions>
+                            <CheckBox Grid.Row="0" Grid.Column="0">Define individual mapping</CheckBox>
+                            <TextBox Grid.Row="0" Grid.Column="1" x:Name="inputImportMapping" Margin="10 0 0 0"/>
+                            <TextBlock Grid.Row="1" Grid.Column="1" Margin="10 0 0 0" TextWrapping="WrapWithOverflow">Use following Notation: (A,X) places pdf page A on stage X of the presentation. For example(2,3),(4,10) places the 2. page of the pdf on stage 3 and the 4. page of the pdf on stage 10.</TextBlock>
+                            <CheckBox Grid.Row="2" Grid.Column="0" Margin="0 10 0 0">Define individual dpi</CheckBox>
+                            <TextBox Grid.Row="2" Grid.Column="1" x:Name="inputDPI" Margin="10 10 0 0"/>
+                        </Grid>
+                    </Border>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="2*"/>
+                        </Grid.ColumnDefinitions>
+                        <Button Grid.Column="1" Padding="10 10">Start the Import</Button>
+                    </Grid>
                 </StackPanel>
             </Border>
             <Border x:Name="advancedView" BorderThickness="1" Background="White" Visibility="Visible" DockPanel.Dock="Top">
