--- a/2D_Editor/PDFImportDialog.xaml
+++ b/2D_Editor/PDFImportDialog.xaml
@@ -46,10 +46,10 @@
                                 <RowDefinition Height="Auto"/>
                                 <RowDefinition Height="Auto"/>
                             </Grid.RowDefinitions>
-                            <CheckBox Grid.Row="0" Grid.Column="0">Define individual mapping</CheckBox>
+                            <CheckBox x:Name="checkBoxIndividualMapping" Grid.Row="0" Grid.Column="0">Define individual mapping</CheckBox>
                             <TextBox Grid.Row="0" Grid.Column="1" x:Name="inputImportMapping" Margin="10 0 0 0"/>
                             <TextBlock Grid.Row="1" Grid.Column="1" Margin="10 0 0 0" TextWrapping="WrapWithOverflow">Use following Notation: (A,X) places pdf page A on stage X of the presentation. For example(2,3),(4,10) places the 2. page of the pdf on stage 3 and the 4. page of the pdf on stage 10.</TextBlock>
-                            <CheckBox Grid.Row="2" Grid.Column="0" Margin="0 10 0 0">Define individual dpi</CheckBox>
+                            <CheckBox x:Name="checkBoxIndividualDPI" Grid.Row="2" Grid.Column="0" Margin="0 10 0 0">Define individual dpi</CheckBox>
                             <TextBox Grid.Row="2" Grid.Column="1" x:Name="inputDPI" Margin="10 10 0 0"/>
                         </Grid>
                     </Border>
@@ -59,7 +59,7 @@
                             <ColumnDefinition Width="1*"/>
                             <ColumnDefinition Width="2*"/>
                         </Grid.ColumnDefinitions>
-                        <Button Grid.Column="1" Padding="10 10">Start the Import</Button>
+                        <Button Grid.Column="1" Padding="10 10" Click="StartImport">Start the Import</Button>
                     </Grid>
                 </StackPanel>
             </Border>
