--- a/2D_Editor/PDFImportDialog.xaml
+++ b/2D_Editor/PDFImportDialog.xaml
@@ -40,17 +40,24 @@
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto"/>
                                 <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto"/>
                                 <RowDefinition Height="Auto"/>
                                 <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
                             </Grid.RowDefinitions>
-                            <CheckBox x:Name="checkBoxIndividualMapping" Grid.Row="0" Grid.Column="0">Define individual mapping</CheckBox>
-                            <TextBox Grid.Row="0" Grid.Column="1" x:Name="inputImportMapping" Margin="10 0 0 0"/>
-                            <TextBlock Grid.Row="1" Grid.Column="1" Margin="10 0 0 0" TextWrapping="WrapWithOverflow">Use following Notation: (A,X) places pdf page A on stage X of the presentation. For example(2,3),(4,10) places the 2. page of the pdf on stage 3 and the 4. page of the pdf on stage 10.</TextBlock>
-                            <CheckBox x:Name="checkBoxIndividualDPI" Grid.Row="2" Grid.Column="0" Margin="0 10 0 0">Define individual dpi</CheckBox>
-                            <TextBox Grid.Row="2" Grid.Column="1" x:Name="inputDPI" Margin="10 10 0 0"/>
+                            <CheckBox x:Name="checkBoxIndividualMapping" Grid.Row="0" Grid.Column="0">Define individual mapping: </CheckBox>
+                            <TextBlock Grid.Row="1" Grid.Column="1" Margin="10 0 0 0">The first page of  the pdf to consider:</TextBlock>
+                            <TextBox Grid.Row="1" Grid.Column="2" x:Name="inputFirstPdf" Margin="10 0 0 5"/>
+                            <TextBlock Grid.Row="2" Grid.Column="1" Margin="10 0 0 0" >Number of total pdf pages to import:</TextBlock>
+                            <TextBox Grid.Row="2" Grid.Column="2" x:Name="inputPdfCount" Margin="10 0 0 5"/>
+                            <TextBlock Grid.Row="3" Grid.Column="1" Margin="10 0 0 0" >Stage number to map the first pdf page to:</TextBlock>
+                            <TextBox Grid.Row="3" Grid.Column="2" x:Name="inputFirstStage" Margin="10 0 0 0"/>
+                            <CheckBox x:Name="checkBoxIndividualDPI" Grid.Row="4" Grid.Column="0" Margin="0 10 0 0">Define individual dpi</CheckBox>
+                            <TextBox Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" x:Name="inputDPI" Margin="10 10 0 0"/>
                         </Grid>
                     </Border>
                     <Grid>
