--- a/2D_Editor/WelcomeWindow.xaml
+++ b/2D_Editor/WelcomeWindow.xaml
@@ -8,7 +8,7 @@
         xmlns:converters="clr-namespace:_2D_Editor.Converters"
         xmlns:local="clr-namespace:_2D_Editor"
         mc:Ignorable="d"
-        Title="2D Editor" Height="450" Width="800"
+        Title="2D Editor v.1.1" Height="450" Width="800"
         Icon="Images/icon.png">
     <Window.Resources>
         <converters:BoolToVisibility x:Key="BoolToVisibillity"/>
